ページの表示内容の調整

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,16 @@
       <input type="submit" value="指定" id="sitei">
     </form>
     <br>
-    <div id="explain">入力したメールアドレスはメール送信のみに使い、それ以外の利用はいたしません. </div>
+    <br>
+    <br>
+    <br>
+    <div id="explain">
+      <ul>
+      <li>上のフォームにメールアドレスを入力して、ボタンを押してください。入力したアドレスに欠席連絡メールが届きます。</li>
+      <li>本来は、google calendar から送信先を指定する仕様ですが、今回はフォームを利用しています。</li>
+      <li>入力したメールアドレスはメール送信のみに使い、それ以外の利用はいたしません. </li>
+      </ul>
+    </div>
 
   </body>
 </html>
